<resources>
    <string name="app_name">Trabalho 4</string>
    <string name="adicionar">Adicionar</string>
    <string name="listar">Listar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="medico">Médico</string>
    <string name="paciente">Paciente</string>
    <string name="consulta">Consulta</string>

    <string name="listaMedicos">Lista de Médicos</string>
    <string name="adicionarMedico">Adicionar Médico</string>
    <string name="editarMedico">Editar Médico</string>
    <string name="nome">Nome</string>
    <string name="crm">Crm</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Numero</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="celular">Celular</string>
    <string name="fixo">Fixo</string>

    <string name="listaPacientes">Lista de Pacientes</string>
    <string name="adicionarPaciente">Adicionar Paciente</string>
    <string name="editarPaciente">Editar Paciente</string>
    <string name="grpSanguineo"> GRP Sanguineo</string>

    <string name="adicionarConsulta">Adicionar Consulta</string>
    <string name="editarConsultas">Editar Consulta</string>
    <string name="listaConsultas">Lista de Consultas</string>
    <string name="observacao">Observação</string>
    <string name="dataInicial">Data e hora Inicial</string>
    <string name="dataFinal">Data e hora Final</string>

</resources>