<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarPaciente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionarPaciente"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/addNomePac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grpSanguineo"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/addGrpPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/addLogradouroPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/logradouro"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/addNumeroPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number"
            android:maxLength="8"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/addCidadePac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cidade"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/addUfPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>


        <EditText
            android:id="@+id/addCelularPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/addFixoPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fixo"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btn_editPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adicionarPaciente"
            android:text="@string/adicionar"
            android:padding="5dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>