<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPaciente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarPaciente"
            android:padding="5dp"/>
        <EditText
            android:id="@+id/editNomePac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grpSanguineo"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/editGrpPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editLogradouroPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/logradouro"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editNumeroPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number"
            android:maxLength="8"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editCidadePac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cidade"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/editUfPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editCelularPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editFixoPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fixo"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn_editPaciente"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:onClick="editarPaciente"
                android:text="@string/editar"
                android:padding="5dp"/>

            <Space
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

            <Button
                android:id="@+id/btn_excluirPaciente"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:onClick="excluirPaciente"
                android:text="@string/excluir"
                android:padding="5dp"/>
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>