<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarMedico">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarMedico"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editNomeMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editCrmMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crm"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editLogradouroMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/logradouro"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editNumeroMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="numberSigned"
            android:maxLength="8"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editCidadeMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cidade"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/editUFMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editCelularMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/editFixoMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fixo"
            android:inputType="none|number"
            android:maxLength="20"
            android:padding="5dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:padding="5dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_editMedico"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:onClick="editarMedico"
                android:text="@string/editar"
                android:padding="5dp"/>

            <Space
                android:layout_width="60dp"
                android:layout_height="11dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/btn_excluirMedico"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:onClick="excluirMedico"
                android:text="@string/excluir"
                android:padding="5dp"/>
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>