<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarConsulta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionarConsulta" />

        <Spinner
            android:id="@+id/addPacienteCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/addMedicoCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/addInicioCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dataInicial"
            android:inputType="datetime" />

        <EditText
            android:id="@+id/addFimCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dataFinal"
            android:inputType="datetime" />

        <EditText
            android:id="@+id/addObsCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/observacao"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_addConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adicionarConsulta"
            android:text="@string/adicionar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>