<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="54dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/medico" />

            <Button
                android:id="@+id/btn_addMedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreAddMedico"
                android:text="@string/adicionar" />

            <Button
                android:id="@+id/btn_listMedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreListarMedico"
                android:text="@string/listar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="65dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paciente" />

            <Button
                android:id="@+id/btn_editPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreAddPaciente"
                android:text="@string/adicionar" />

            <Button
                android:id="@+id/btn_listPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreListarPaciente"
                android:text="@string/listar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="211dp">

            <Space
                android:layout_width="65dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consulta" />

            <Button
                android:id="@+id/btn_addConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreAddConsulta"
                android:text="@string/adicionar" />

            <Button
                android:id="@+id/btn_listConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="abreListarConsulta"
                android:text="@string/listar" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>